# test-task-bewise.ai

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 890113632877_init_migration.py
src/: main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: applications.py
src/config/: __init__.py  config.py  kafka_config.py
src/core/db/: session.py
src/core/models/: __init__.py  applications.py  base.py
src/core/repository/: __init__.py  applications.py  repository.py
src/core/schemas/: __init__.py  applications.py
src/core/service/: __init__.py  applications.py  service.py
src/core/uow/: unit_of_work.py
src/utils/: logging.py
tests/: conftest.py
tests/fakes/: __init__.py  applications.py
tests/unit/: conftest.py  test_applications.py
